{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 5,
  "lineage": "ac7dce20-040e-bb61-fa96-586b899284d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c9bb41ac6320b1b6",
            "arn": "arn:aws:ec2:us-west-1:123456789012:instance/i-06368f8a9da7ab277",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "tdsbx-data",
                  "tofu-drift-sandbox": "tdsbx"
                },
                "tags_all": {
                  "Name": "tdsbx-data",
                  "tofu-drift-sandbox": "tdsbx"
                },
                "throughput": 125,
                "volume_id": "vol-064471b497294d84e",
                "volume_size": 1,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06368f8a9da7ab277",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fff9e7f473e2fbbf"
              }
            ],
            "primary_network_interface_id": "eni-0fff9e7f473e2fbbf",
            "private_dns": "ip-10-42-0-29.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.0.29",
            "region": "us-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "tofu-drift-sandbox": "tdsbx"
                },
                "throughput": 125,
                "volume_id": "vol-03296e07969f3197f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4768cf8f73de84b",
            "tags": {
              "Name": "tdsbx-instance"
            },
            "tags_all": {
              "Name": "tdsbx-instance",
              "tofu-drift-sandbox": "tdsbx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02650871c4b541c45"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.up",
            "data.aws_ssm_parameter.al2023_arm64"
          ],
          "identity": {
            "account_id": "123456789012",
            "id": "i-06368f8a9da7ab277",
            "region": "us-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789012:internet-gateway/igw-0ea4df03e6b2d8f2c",
            "id": "igw-0ea4df03e6b2d8f2c",
            "owner_id": "123456789012",
            "region": "us-west-1",
            "tags": {
              "Name": "tdsbx-igw"
            },
            "tags_all": {
              "Name": "tdsbx-igw",
              "tofu-drift-sandbox": "tdsbx"
            },
            "vpc_id": "vpc-06477faef5ba8c81b"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "identity": {
            "account_id": "123456789012",
            "id": "igw-0ea4df03e6b2d8f2c",
            "region": "us-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:123456789012:loadbalancer/app/tdsbx-alb/a0fb401e97734c75",
            "arn_suffix": "app/tdsbx-alb/a0fb401e97734c75",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tdsbx-alb-1927040702.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:123456789012:loadbalancer/app/tdsbx-alb/a0fb401e97734c75",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tdsbx-alb",
            "preserve_host_header": false,
            "region": "us-west-1",
            "security_groups": [
              "sg-02650871c4b541c45"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028f0295af9f3a161"
              },
              {
                "subnet_id": "subnet-0b4768cf8f73de84b"
              }
            ],
            "subnets": [
              "subnet-028f0295af9f3a161",
              "subnet-0b4768cf8f73de84b"
            ],
            "tags_all": {
              "tofu-drift-sandbox": "tdsbx"
            },
            "vpc_id": "vpc-06477faef5ba8c81b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.up"
          ],
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:123456789012:loadbalancer/app/tdsbx-alb/a0fb401e97734c75"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:123456789012:listener/app/tdsbx-alb/a0fb401e97734c75/0524b0e840e10d4e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:123456789012:targetgroup/tdsbx-tg/b3486d95889e8ca4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:123456789012:listener/app/tdsbx-alb/a0fb401e97734c75/0524b0e840e10d4e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:123456789012:loadbalancer/app/tdsbx-alb/a0fb401e97734c75",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "tofu-drift-sandbox": "tdsbx"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.up"
          ],
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:123456789012:listener/app/tdsbx-alb/a0fb401e97734c75/0524b0e840e10d4e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:123456789012:targetgroup/tdsbx-tg/b3486d95889e8ca4",
            "arn_suffix": "targetgroup/tdsbx-tg/b3486d95889e8ca4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:123456789012:targetgroup/tdsbx-tg/b3486d95889e8ca4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:123456789012:loadbalancer/app/tdsbx-alb/a0fb401e97734c75"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tdsbx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "tofu-drift-sandbox": "tdsbx"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06477faef5ba8c81b"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:123456789012:targetgroup/tdsbx-tg/b3486d95889e8ca4"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789012:route-table/rtb-02a3e8bddfe62770b",
            "id": "rtb-02a3e8bddfe62770b",
            "owner_id": "123456789012",
            "propagating_vgws": [],
            "region": "us-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea4df03e6b2d8f2c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tdsbx-rt"
            },
            "tags_all": {
              "Name": "tdsbx-rt",
              "tofu-drift-sandbox": "tdsbx"
            },
            "timeouts": null,
            "vpc_id": "vpc-06477faef5ba8c81b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ],
          "identity": {
            "account_id": "123456789012",
            "id": "rtb-02a3e8bddfe62770b",
            "region": "us-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01594fbfd1cf5bd3d",
            "region": "us-west-1",
            "route_table_id": "rtb-02a3e8bddfe62770b",
            "subnet_id": "subnet-0b4768cf8f73de84b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.up"
          ],
          "identity": {
            "account_id": "123456789012",
            "id": "rtbassoc-01594fbfd1cf5bd3d",
            "region": "us-west-1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb42ea5276f6ab69",
            "region": "us-west-1",
            "route_table_id": "rtb-02a3e8bddfe62770b",
            "subnet_id": "subnet-028f0295af9f3a161"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.up"
          ],
          "identity": {
            "account_id": "123456789012",
            "id": "rtbassoc-0cb42ea5276f6ab69",
            "region": "us-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789012:security-group/sg-02650871c4b541c45",
            "description": "tofu-drift sandbox",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02650871c4b541c45",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.42.0.0/16"
                ],
                "description": "HTTP inside the VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tdsbx-sg",
            "name_prefix": "",
            "owner_id": "123456789012",
            "region": "us-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tdsbx-sg"
            },
            "tags_all": {
              "Name": "tdsbx-sg",
              "tofu-drift-sandbox": "tdsbx"
            },
            "timeouts": null,
            "vpc_id": "vpc-06477faef5ba8c81b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "identity": {
            "account_id": "123456789012",
            "id": "sg-02650871c4b541c45",
            "region": "us-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789012:subnet/subnet-0b4768cf8f73de84b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.42.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4768cf8f73de84b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123456789012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "tdsbx-subnet-0"
            },
            "tags_all": {
              "Name": "tdsbx-subnet-0",
              "tofu-drift-sandbox": "tdsbx"
            },
            "vpc_id": "vpc-06477faef5ba8c81b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.up"
          ],
          "identity": {
            "account_id": "123456789012",
            "id": "subnet-0b4768cf8f73de84b",
            "region": "us-west-1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789012:subnet/subnet-028f0295af9f3a161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.42.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028f0295af9f3a161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123456789012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-1",
            "tags": {
              "Name": "tdsbx-subnet-1"
            },
            "tags_all": {
              "Name": "tdsbx-subnet-1",
              "tofu-drift-sandbox": "tdsbx"
            },
            "vpc_id": "vpc-06477faef5ba8c81b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.up"
          ],
          "identity": {
            "account_id": "123456789012",
            "id": "subnet-028f0295af9f3a161",
            "region": "us-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:123456789012:vpc/vpc-06477faef5ba8c81b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-02c7711cea6bc08dd",
            "default_route_table_id": "rtb-01c9f94a689dbfc24",
            "default_security_group_id": "sg-022de9ab87e61375e",
            "dhcp_options_id": "dopt-09c9a1db8054f9189",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06477faef5ba8c81b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c9f94a689dbfc24",
            "owner_id": "123456789012",
            "region": "us-west-1",
            "tags": {
              "Name": "tdsbx-vpc"
            },
            "tags_all": {
              "Name": "tdsbx-vpc",
              "tofu-drift-sandbox": "tdsbx"
            }
          },
          "identity": {
            "account_id": "123456789012",
            "id": "vpc-06477faef5ba8c81b",
            "region": "us-west-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}